fix #41 article author bar
hidden by AppBar when it become fixed in position

--- a/app/components/Article/Article.css
+++ b/app/components/Article/Article.css
@@ -2,7 +2,7 @@
 .Article {
   background: white;
   width: 100%;
-  margin: 0px auto;
+  margin: 70px auto 0px;
 
   position: relative;
   overflow: hidden;
